Fixes spacing

--- a/CSS/apartments.css
+++ b/CSS/apartments.css
@@ -128,7 +128,7 @@ main {
     background-color: #e7feff;
     color:  rgb(9, 9, 120);
     padding: 20px;
-    width: 500px;
+    width: 30%;
 }
 
 #contactForm legend {
@@ -153,14 +153,18 @@ main {
 
 button {
     margin: 10px;
-    padding-left: 240px;
-    padding-right: 240px;
+    padding-left: 14%;
+    padding-right: 14%;
     font-weight: bold;
     border: solid black 2px;
 }
 
+
+
+
 #exterior {
     display: block;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     border: double rgb(144, 70, 13) 4px;
